tests/parser/parse-let.6.bad.error
error: Malformed let binding
  --> test:5:8
   |
 5 |    (let (x) 5))
   |          ^ expected list
